This is the next push

--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/SachaBarber.CQRS.Demo.Orders.Domain.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/SachaBarber.CQRS.Demo.Orders.Domain.csproj
@@ -124,6 +124,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Aggregates\Order.cs" />
+    <Compile Include="Aggregates\OrderItem.cs" />
     <Compile Include="Commands\Handlers\OrderCommandHandlers.cs" />
     <Compile Include="EventStore\InMemoryEventStore.cs" />
     <Compile Include="Events\OrderCreatedEvent.cs" />
