--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Orders/SachaBarber.CQRS.Demo.Orders.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Orders/SachaBarber.CQRS.Demo.Orders.csproj
@@ -46,7 +46,9 @@
     </Compile>
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CreateOrderCommand.cs" />
+    <Compile Include="Commands\ChangeOrderAddressComand.cs" />
     <Compile Include="Commands\RenameOrderCommand.cs" />
+    <Compile Include="DTOs\OrderItem.cs" />
     <Compile Include="IOrderService.cs" />
     <Compile Include="OrderServiceInvoker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
