--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Orders/SachaBarber.CQRS.Demo.Orders.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Orders/SachaBarber.CQRS.Demo.Orders.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Commands\RenameOrderCommand.cs" />
     <Compile Include="DTOs\OrderItem.cs" />
     <Compile Include="IOrderService.cs" />
+    <Compile Include="OrderServiceClient.cs" />
     <Compile Include="OrderServiceInvoker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
