Getting rid of Mediatr

--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
@@ -37,13 +37,7 @@
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets async="true">
-      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" 
-              fileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.log" 
-              archiveFileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.{#}.log" 
-              archiveEvery="Day" 
-              archiveNumbering="Rolling" 
-              maxArchiveFiles="7" 
-              concurrentWrites="true" />                  
+      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />                  
     </targets>
     <rules>
 
@@ -92,8 +86,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="serviceLayerBehavior" name="SachaBarber.CQRS.Demo.Orders.Domain.OrderService">
-        <endpoint address="net.tcp://localhost:63105/OrderService" binding="netTcpBinding" bindingConfiguration="serviceLayerTcpBinding" 
-                  name="orderServiceEndpoint" contract="SachaBarber.CQRS.Demo.Orders.IOrderService" />
+        <endpoint address="net.tcp://localhost:63105/OrderService" binding="netTcpBinding" bindingConfiguration="serviceLayerTcpBinding" name="orderServiceEndpoint" contract="SachaBarber.CQRS.Demo.Orders.IOrderService" />
       </service>
       
 
