--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
@@ -2,47 +2,16 @@
 <configuration>
 
   <configSections>
-    <!--<section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core" />
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core" />-->
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
 
-  <connectionStrings>
-    <!--<add name="OptionsDB" connectionString="Data Source=omnidev;Initial Catalog=options;Integrated Security=True;Timeout=180;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
-    <add name="NServiceBus/Persistence" connectionString="Data Source=omnidev;Initial Catalog=OptionsNServiceBusPersistence;Integrated Security=True;Timeout=180;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
-  </connectionStrings>
-
-  <!--<appSettings>
-    <add key="NServiceBus/Persistence/NHibernate/dialect" value="NHibernate.Dialect.MsSql2008Dialect" />
-    <add key="NServiceBus/Persistence/NHibernate/connection.provider" value="NHibernate.Connection.DriverConnectionProvider" />
-    <add key="NServiceBus/Persistence/NHibernate/connection.driver_class" value="NHibernate.Driver.Sql2008ClientDriver" />
-    <add key="nhibernate-logger" value="Moneycorp.Options.Infrastructure.Logging.NLogFactory, Moneycorp.Options.Infrastructure" />
-  </appSettings>-->
-
-
-  <!--<TransportConfig MaximumConcurrencyLevel="1" MaxRetries="0" MaximumMessageThroughputPerSecond="10" />
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="SachaBarber.CQRS.Demo.Orders.Domain.error" />-->
-
-  <!-- If you want a remote machine endpoint for messages, use syntax like Endpoint="SachaBarber.CQRS.Demo.XXXX@C1951" -->
-  <!--<UnicastBusConfig ForwardReceivedMessagesTo="audit">
-    <MessageEndpointMappings>
-      
-      <add Assembly="Moneycorp.Options.Messages" Type="SachaBarber.CQRS.Demo.Messages.Commands.ClearCacheCommand" Endpoint="SachaBarber.CQRS.Demo.XXXX" />
-    </MessageEndpointMappings>
-  </UnicastBusConfig>
-
-  <Logging Threshold="ALL" />-->
-
+ 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets async="true">
       <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />                  
     </targets>
     <rules>
-
-      <!--<logger name="NServiceBus*" minlevel="Error" writeTo="file" />-->
-      <!--<logger name="SachaBarber.CQRS.Demo.Orders.Domain*" minlevel="Debug" writeTo="file" />-->
+      <logger name="SachaBarber.CQRS.Demo.Orders.Domain*" minlevel="Debug" writeTo="file" />
       <logger name="*" minlevel="Debug" writeTo="file" />
     </rules>
   </nlog>
