--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
@@ -70,6 +70,10 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RavenDB.Database.3.0.3599\lib\net45\Raven.Abstractions.dll</HintPath>
@@ -133,12 +137,17 @@
     <Compile Include="ExtensionMethods\ObservableExtensions.cs" />
     <Compile Include="Services\DialogService.cs" />
     <Compile Include="Services\IDialogService.cs" />
+    <Compile Include="Services\IMessageBoxService.cs" />
     <Compile Include="Services\ISchedulerService.cs" />
+    <Compile Include="Services\MessageBoxService.cs" />
     <Compile Include="Services\SchedulerService.cs" />
     <Compile Include="ShellWindow.xaml.cs">
       <DependentUpon>ShellWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AsyncDisposableViewModel.cs" />
+    <Compile Include="ViewModels\CreateOrderDialogViewModel.cs" />
+    <Compile Include="ViewModels\CreateOrderDialogViewModelFactory.cs" />
+    <Compile Include="ViewModels\DialogViewModel.cs" />
     <Compile Include="ViewModels\DisposableViewModel.cs" />
     <Compile Include="ViewModels\IDialogViewModel.cs" />
     <Compile Include="ViewModels\IDialogWindowEvents.cs" />
@@ -197,9 +206,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\Options.Styles.Threading.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Resources\Styles.Dialogs.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\Styles.Threading.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="ShellWindow.xaml">
       <SubType>Designer</SubType>
