--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
@@ -1,8 +1,89 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-    </startup>
+
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+
+
+
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets async="true">
+      <target name="file" xsi:type="File"
+              layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}"
+              fileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.log"
+              archiveFileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.{#}.log"
+              archiveEvery="Day"
+              archiveNumbering="Rolling"
+              maxArchiveFiles="7"
+              concurrentWrites="true"/>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="file" />
+
+      <logger name="Raven*" minlevel="Error" writeTo="file" />
+      <logger name="SachaBarber.CQRS.*" minlevel="Info" writeTo="file" />
+    </rules>
+  </nlog>
+
+
+  <system.serviceModel>
+
+    <diagnostics performanceCounters="All"/>
+
+    <bindings>
+      <netTcpBinding>
+
+        <!-- Binding used for internal comms. Transport level security [Windows.EncryptAndSign] will be enabled network config allows.-->
+        <binding name="serviceLayerTcpBinding"
+                 maxReceivedMessageSize="2147483647" closeTimeout="00:59:00" openTimeout="00:59:00" receiveTimeout="00:59:00" sendTimeout="00:59:00">
+          <security mode="None"/>
+          <readerQuotas maxStringContentLength="8192" maxArrayLength="20971520"/>
+        </binding>
+
+
+      </netTcpBinding>
+
+
+    </bindings>
+
+
+
+
+    <client>
+
+
+      <endpoint address="net.tcp://localhost:63105/OrderService"
+          name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint"
+          binding="netTcpBinding"
+          bindingConfiguration="serviceLayerTcpBinding"
+          contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
+      </endpoint>
+
+
+
+    </client>
+
+  </system.serviceModel>
+
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="All" propagateActivity="true">
+        <listeners>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener"
+               initializeData="c:\temp\SachaBarber.CQRS.Demo.WPFClient.svclog"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
+
+
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -15,4 +96,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 </configuration>
