--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/packages.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net451" />
   <package id="Prism" version="5.0.0" targetFramework="net451" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net451" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net451" />
