--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
@@ -5,18 +5,14 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
 
+  <appSettings>
+    <add key="RabbitMqHost" value="localhost"/>
+  </appSettings>
 
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets async="true">
-      <target name="file" xsi:type="File"
-              layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}"
-              fileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.log"
-              archiveFileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.{#}.log"
-              archiveEvery="Day"
-              archiveNumbering="Rolling"
-              maxArchiveFiles="7"
-              concurrentWrites="true"/>
+      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="file" />
@@ -29,16 +25,15 @@
 
   <system.serviceModel>
 
-    <diagnostics performanceCounters="All"/>
+    <diagnostics performanceCounters="All" />
 
     <bindings>
       <netTcpBinding>
 
         <!-- Binding used for internal comms. Transport level security [Windows.EncryptAndSign] will be enabled network config allows.-->
-        <binding name="serviceLayerTcpBinding"
-                 maxReceivedMessageSize="2147483647" closeTimeout="00:59:00" openTimeout="00:59:00" receiveTimeout="00:59:00" sendTimeout="00:59:00">
-          <security mode="None"/>
-          <readerQuotas maxStringContentLength="8192" maxArrayLength="20971520"/>
+        <binding name="serviceLayerTcpBinding" maxReceivedMessageSize="2147483647" closeTimeout="00:59:00" openTimeout="00:59:00" receiveTimeout="00:59:00" sendTimeout="00:59:00">
+          <security mode="None" />
+          <readerQuotas maxStringContentLength="8192" maxArrayLength="20971520" />
         </binding>
 
 
@@ -53,11 +48,7 @@
     <client>
 
 
-      <endpoint address="net.tcp://localhost:63105/OrderService"
-          name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint"
-          binding="netTcpBinding"
-          bindingConfiguration="serviceLayerTcpBinding"
-          contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
+      <endpoint address="net.tcp://localhost:63105/OrderService" name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint" binding="netTcpBinding" bindingConfiguration="serviceLayerTcpBinding" contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
       </endpoint>
 
 
@@ -70,8 +61,7 @@
     <sources>
       <source name="System.ServiceModel" switchValue="All" propagateActivity="true">
         <listeners>
-          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener"
-               initializeData="c:\temp\SachaBarber.CQRS.Demo.WPFClient.svclog"/>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\temp\SachaBarber.CQRS.Demo.WPFClient.svclog" />
         </listeners>
       </source>
     </sources>
