--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
@@ -74,6 +74,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="RabbitMQ.Client, Version=3.5.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RabbitMQ.Client.3.5.0\lib\net40\RabbitMQ.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RavenDB.Database.3.0.3599\lib\net45\Raven.Abstractions.dll</HintPath>
@@ -86,6 +90,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Reactive.Core">
       <HintPath>..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
@@ -137,7 +142,9 @@
     <Compile Include="ExtensionMethods\ObservableExtensions.cs" />
     <Compile Include="Services\DialogService.cs" />
     <Compile Include="Services\IDialogService.cs" />
+    <Compile Include="Services\IInterProcessBusSubscriber.cs" />
     <Compile Include="Services\IMessageBoxService.cs" />
+    <Compile Include="Services\InterProcessBusSubscriber.cs" />
     <Compile Include="Services\ISchedulerService.cs" />
     <Compile Include="Services\MessageBoxService.cs" />
     <Compile Include="Services\SchedulerService.cs" />
