--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
@@ -41,11 +41,11 @@
       </netTcpBinding>
     </bindings>
 
-    <extensions>
+    <!--<extensions>
       <behaviorExtensions>
         <add name="ErrorHandlerBehavior" type="SachaBarber.CQRS.Demo.SharedCore.WCF.ErrorHandlerBehaviorExtension, SachaBarber.CQRS.Demo.SharedCore" />
       </behaviorExtensions>
-    </extensions>
+    </extensions>-->
 
     <behaviors>
       <serviceBehaviors>
@@ -53,15 +53,15 @@
           <serviceThrottling maxConcurrentCalls="64" maxConcurrentSessions="128" maxConcurrentInstances="64" />
           <dataContractSerializer maxItemsInObjectGraph="6553600" />
           <serviceDebug includeExceptionDetailInFaults="True" />
-          <ErrorHandlerBehavior />
+          <!--<ErrorHandlerBehavior />-->
         </behavior>
       </serviceBehaviors>
 
-      <endpointBehaviors>
+      <!--<endpointBehaviors>
         <behavior name="ErrorHandlerBehavior">
           <ErrorHandlerBehavior />
         </behavior>
-      </endpointBehaviors>
+      </endpointBehaviors>-->
 
     </behaviors>
     <services>
