--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
@@ -48,7 +48,11 @@
     <client>
 
 
-      <endpoint address="net.tcp://localhost:63105/OrderService" name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint" binding="netTcpBinding" bindingConfiguration="serviceLayerTcpBinding" contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
+      <endpoint address="net.tcp://localhost:63105/OrderService" 
+                name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint" 
+                binding="netTcpBinding" 
+                bindingConfiguration="serviceLayerTcpBinding" 
+                contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
       </endpoint>
 
 
