--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.config
@@ -6,19 +6,22 @@
   </configSections>
 
   <appSettings>
-    <add key="RabbitMqHost" value="localhost"/>
+    <add key="RabbitMqHost" value="localhost" />
+    <add key="MSMQueueName" value=".\private$\SachaBarber.CQRS.Demo" />
   </appSettings>
 
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets async="true">
-      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
+      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="${basedir}/logs/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.log" archiveFileName="${basedir}/logs/SachaBarber.CQRS.Demo.WPFClient-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="file" />
-
       <logger name="Raven*" minlevel="Error" writeTo="file" />
-      <logger name="SachaBarber.CQRS.*" minlevel="Info" writeTo="file" />
+      <logger name="*" writeTo="file">
+        <filters>
+          <when condition="starts-with('${logger}','Raven.')" action="Ignore" />
+        </filters>
+      </logger>
     </rules>
   </nlog>
 
@@ -48,11 +51,7 @@
     <client>
 
 
-      <endpoint address="net.tcp://localhost:63105/OrderService" 
-                name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint" 
-                binding="netTcpBinding" 
-                bindingConfiguration="serviceLayerTcpBinding" 
-                contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
+      <endpoint address="net.tcp://localhost:63105/OrderService" name="SachaBarber.CQRS.Demo.Orders.Domain.OrderServiceEndpoint" binding="netTcpBinding" bindingConfiguration="serviceLayerTcpBinding" contract="SachaBarber.CQRS.Demo.Orders.IOrderService">
       </endpoint>
 
 
