--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/App.config
@@ -8,21 +8,27 @@
   </configSections>
 
   <appSettings>
-    <add key="RabbitMqHost" value="localhost"/>
+    <add key="RabbitMqHost" value="localhost" />
+    <add key="MSMQueueName" value=".\private$\SachaBarber.CQRS.Demo" />
   </appSettings>
 
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets async="true">
-      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
-      <target name="ravenFile" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-Raven-${shortdate}.log" archiveFileName="c:/temp/SachaBarber.CQRS.Demo.Orders.Domain-Raven-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
+      <target name="console" xsi:type="Console" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" />
+      <target name="file" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="${basedir}/logs/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.log" archiveFileName="${basedir}/logs/SachaBarber.CQRS.Demo.Orders.Domain-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
+      <target name="ravenFile" xsi:type="File" layout="${longdate} | ${level} | ${message} | ${onexception:EXCEPTION OCCURRED\:${exception:format=tostring}}" fileName="${basedir}/logs/SachaBarber.CQRS.Demo.Orders.Domain-Raven-${shortdate}.log" archiveFileName="${basedir}/logs/SachaBarber.CQRS.Demo.Orders.Domain-Raven-${shortdate}.{#}.log" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" />
 
 
 
     </targets>
     <rules>
       <logger name="Raven.*" minlevel="Error" writeTo="ravenFile" final="true" />
-      <logger name="SachaBarber.CQRS.*" minlevel="Info" writeTo="file" />
+      <logger name="*" writeTo="file,console">
+        <filters>
+            <when condition="starts-with('${logger}','Raven.')" action="Ignore" />
+        </filters>
+      </logger>
     </rules>
   </nlog>
 
