--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/SachaBarber.CQRS.Demo.Orders.Domain.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.Domain/SachaBarber.CQRS.Demo.Orders.Domain.csproj
@@ -68,24 +68,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="RabbitMQ.Client, Version=3.5.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RabbitMQ.Client.3.5.0\lib\net40\RabbitMQ.Client.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
-    <Reference Include="System.CoreEx, Version=1.0.2856.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\ThirdParty\Microsoft\Reactive Extensions\v1.0.2856.0\Net4\System.CoreEx.dll</HintPath>
-    </Reference>
     <Reference Include="System.Data.Services" />
     <Reference Include="System.IdentityModel" />
-    <Reference Include="System.Interactive, Version=1.0.2856.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\ThirdParty\Microsoft\Reactive Extensions\v1.0.2856.0\Net4\System.Interactive.dll</HintPath>
-    </Reference>
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -108,8 +96,6 @@
     <Compile Include="Aggregates\OrderItem.cs" />
     <Compile Include="Bus\IBusEventHandler.cs" />
     <Compile Include="Bus\BusEventPublisher.cs" />
-    <Compile Include="Bus\InterProcessBus.cs" />
-    <Compile Include="Bus\IInterProcessBus.cs" />
     <Compile Include="Commands\Handlers\OrderCommandHandlers.cs" />
     <Compile Include="EventStore\InMemoryEventStore.cs" />
     <Compile Include="Events\EventBase.cs" />
@@ -170,6 +156,14 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusAdapters\SachaBarber.CQRS.Demo.MSQMAdapter\SachaBarber.CQRS.Demo.MSQMAdapter.csproj">
+      <Project>{4068d2da-f0b6-40a8-baa2-f4a93a36c1f6}</Project>
+      <Name>SachaBarber.CQRS.Demo.MSQMAdapter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BusAdapters\SachaBarber.CQRS.Demo.RabbitMQAdapter\SachaBarber.CQRS.Demo.RabbitMQAdapter.csproj">
+      <Project>{d3edaa15-2c68-42be-96e6-3164fa1379d0}</Project>
+      <Name>SachaBarber.CQRS.Demo.RabbitMQAdapter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CQRSlite\CQRSlite.csproj">
       <Project>{dafd2a8a-d6b0-4433-8ddf-b98460c64ec6}</Project>
       <Name>CQRSlite</Name>
