--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/SachaBarber.CQRS.Demo.WPFClient.csproj
@@ -74,10 +74,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="RabbitMQ.Client, Version=3.5.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RabbitMQ.Client.3.5.0\lib\net40\RabbitMQ.Client.dll</HintPath>
-    </Reference>
     <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RavenDB.Database.3.0.3599\lib\net45\Raven.Abstractions.dll</HintPath>
@@ -147,9 +143,7 @@
     </Compile>
     <Compile Include="Services\DialogService.cs" />
     <Compile Include="Services\IDialogService.cs" />
-    <Compile Include="Services\IInterProcessBusSubscriber.cs" />
     <Compile Include="Services\IMessageBoxService.cs" />
-    <Compile Include="Services\InterProcessBusSubscriber.cs" />
     <Compile Include="Services\ISchedulerService.cs" />
     <Compile Include="Services\MessageBoxService.cs" />
     <Compile Include="Services\SchedulerService.cs" />
@@ -211,6 +205,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusAdapters\SachaBarber.CQRS.Demo.MSQMAdapter\SachaBarber.CQRS.Demo.MSQMAdapter.csproj">
+      <Project>{4068d2da-f0b6-40a8-baa2-f4a93a36c1f6}</Project>
+      <Name>SachaBarber.CQRS.Demo.MSQMAdapter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BusAdapters\SachaBarber.CQRS.Demo.RabbitMQAdapter\SachaBarber.CQRS.Demo.RabbitMQAdapter.csproj">
+      <Project>{d3edaa15-2c68-42be-96e6-3164fa1379d0}</Project>
+      <Name>SachaBarber.CQRS.Demo.RabbitMQAdapter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CQRSlite\CQRSlite.csproj">
       <Project>{dafd2a8a-d6b0-4433-8ddf-b98460c64ec6}</Project>
       <Name>CQRSlite</Name>
